--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "new repo for github_interface",
   "main": "backend_app.js",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongoose": "^4.13.6",
     "passport": "^0.4.0",
