--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "mongoose": "^4.13.6",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11"
