--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express-session": "^1.15.6",
     "mongoose": "^4.13.6",
     "passport": "^0.4.0",
-    "passport-github2": "^0.1.11"
+    "passport-github2": "^0.1.11",
+    "request": "^2.83.0"
   },
   "devDependencies": {},
   "scripts": {
